app/javascript/style/components/user_menu/mobile_friendly.scss
@use "../header";
@use '../../utils/color';
@use '../../utils/font';

.menu-area[data-is-open="true"] {
  .user-menu[data-mode="mobile"] {
    top: header.$height;
  }
}

.user-menu[data-mode="mobile"] {
  // layout
  position: absolute;
  left: 0;
  width: 100%;
  display: flex;
  flex-direction: column;
  height: 100vh;

  // looks
  background: color.$neutral-background;

  .user-menu__text {
    // layout
    padding: 20px;
    margin-left: 10px;

    // looks
    font-family: font.$poppins;
    color: color.$veue-corporate;
    font-size: 20px;
  }

  ul {
    // layout
    margin: 0 20px 0 20px;

    // looks
    background: color.$white;
    border-radius: 10px;

    li {
      // layout
      display: flex;

      // looks
      cursor: pointer;
      border-bottom: 1px solid color.$neutral-soft;

      a,
      a:hover,
      a:visited {
        // layout
        padding: 20px;
        flex: 1;

        // looks
        color: color.$neutral-dark;
        font-size: 16px;
      }

      a:hover {
        // looks
        color: color.$veue-corporate;
      }
    }

    li:first-of-type {
      // layout
      padding: 20px;

      // looks
      font-size: 20px;
      font-family: font.$poppins;
      font-weight: 400;
      color: color.$veue-corporate;
    }

    li:last-of-type {
      border-bottom: unset;
    }
  }
}

